# ReasonableVulkan

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  metadatas.json  vcpkg-configuration.json  vcpkg.json
src/assetManager/: Animation.cpp  Animation.h  Asset.cpp  Asset.hpp  AssetException.hpp  AssetFactoryRegistry.hpp  AssetInfo.cpp  AssetInfo.hpp  AssetManager.cpp  AssetManager.hpp  AssetTypes.hpp  AssimpGLMHelpers.cpp  AssimpGLMHelpers.h  Bone.cpp  Bone.h  CMakeLists.txt  Material.cpp  Material.hpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UUIDManager.cpp  UUIDManager.hpp  Vertex.cpp  Vertex.hpp
src/assetManager/assets/: Model.cpp  Model.h  Node.h
src/assetManager/assets/material/: Material.cpp  Material.hpp
src/assetManager/assets/mesh/: Mesh.cpp  Vertex.hpp
src/assetManager/assets/shader/: Shader.h
src/assetManager/assets/texture/: Texture.cpp  Texture.h
src/assetManager/include/: Asset.hpp  AssetInfo.hpp  AssetManagerInterface.h  AssetTypes.hpp  VertexAsset.hpp  VertexHandle.hpp
src/assetManager/include/assetDatas/: MaterialData.h  MeshData.h  ModelData.h  Node.h  ShaderData.h  ShaderProgramData.h  TextureData.h
src/assetManager/src/: Asset.hpp  AssetFactoryRegistry.hpp  AssetInfo.cpp  AssetManager.cpp  AssetManager.hpp  AssetManager.tpp  AssetTypes.hpp  AssimpGLMHelpers.h  JsonHelpers.hpp
src/assetManager/src/assets/: Model.cpp  Model.h  ModelAsset.cpp  ModelAsset.h
src/assetManager/src/assets/configAsset/: ConfigAsset.cpp  ConfigAsset.h
src/assetManager/src/assets/engineAssets/: PrefabAsset.cpp  PrefabAsset.h  SceneAsset.cpp  SceneAsset.h
src/assetManager/src/assets/material/: Material.cpp  Material.hpp
src/assetManager/src/assets/materialAsset/: MaterialAsset.cpp  MaterialAsset.hpp
src/assetManager/src/assets/mesh/: Mesh.cpp  Mesh.h  Vertex.cpp
src/assetManager/src/assets/meshAsset/: MeshAsset.cpp  MeshAsset.h  VertexAsset.cpp  VertexHandle.cpp
src/assetManager/src/assets/shader/: Shader.cpp  Shader.h
src/assetManager/src/assets/shaderAsset/: ShaderAsset.cpp  ShaderAsset.h  ShaderIncluder.cpp  ShaderIncluder.hpp
src/assetManager/src/assets/shaderProgram/: ShaderProgramAsset.cpp  ShaderProgramAsset.h
src/assetManager/src/assets/texture/: Texture.cpp  Texture.h
src/assetManager/src/assets/textureAsset/: TextureAsset.cpp  TextureAsset.h
src/assetManager/tests/: AssetManagerTest.cpp  AssetManagerTests.cpp  MockAsset.hpp  ModelTest.cpp  TestMain.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.tpp  README.md
src/engine/ecs/: Component.cpp  Component.h  Component.hpp  ComponentArray.cpp  ComponentArray.h  ComponentArray.tpp  ComponentArrayBase.h  ComponentType.h  Entity.cpp  Entity.h  IComponentArray.h  IntegralComponentArray.h  IntegralComponentArray.tpp  Scene.cpp  Scene.h  Scene.tpp  System.cpp  System.h  System.tpp  SystemBase.h  SystemManager.cpp  SystemManager.h  Transform.cpp  Transform.h  TransformNode.h  Types.h
src/engine/ecs/componentArrays/: ComponentArray.h  ComponentArray.tpp  ComponentType.h  IComponentArray.h  IntegralComponentArray.h  IntegralComponentArray.tpp
src/engine/ecs/systems/: Transform.h  TransformSystem.cpp  TransformSystem.h
src/engine/systems/collisionSystem/: CollisionSystem.cpp  CollisionSystem.hpp
src/engine/systems/editorSystem/: EditorSystem.cpp  EditorSystem.hpp  ImGui_GLM_Helpers.hpp
src/engine/systems/editorSystem/showImGuiComponents/: ShowImGuiCamera.hpp  ShowImGuiModel.hpp  ShowImGuiTransform.hpp
src/engine/systems/lightSystem/: LightSystem.cpp  LightSystem.hpp
src/engine/systems/lightSystem/components/: DirectionalLight.cpp  DirectionalLight.hpp  LightBase.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
src/engine/systems/renderingSystem/: RenderSystem.cpp  RenderSystem.h
src/engine/systems/renderingSystem/componets/: Camera.cpp  Camera.h  Camera.hpp  CameraComponent.cpp  CameraComponent.hpp  Light.cpp  Light.hpp  LightComponent.cpp  LightComponent.hpp  Material.h  Mesh.h  Model.cpp  Model.hpp  Renderer3D.h  RendererComponent.cpp  RendererComponent.hpp
src/engine/systems/transformSystem/: TransformSystem.cpp  TransformSystem.h
src/engine/systems/transformSystem/componets/: Transform.cpp  Transform.h  (+3 more)
src/engine/tests/: EngineTest.cpp  SceneTest.cpp  TestMain.cpp
src/gfx/: CMakeLists.txt  GraphicsEngine.cpp  GraphicsEngine.hpp
src/gfx/tests/: MockGraphicsEngine .cpp
src/platform/: CMakeLists.txt  platform.cpp  platform.hpp
src/platform/include/: PlatformInterface.hpp
src/platform/src/: Platform.cpp  Platform.hpp
src/platform/tests/: PlatformTestFixture .cpp
src/vks/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.h  vulkanRenderer.cpp  vulkanRenderer.h
src/vks/base/: VulkanAmModel.cpp  VulkanAmModel.h  VulkanDevice.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTools.cpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  vulkanexamplebase.cpp
src/vks/include/: GraphicsEngine.hpp  LightData.hpp  ShaderDefinesEnum.hpp
src/vks/src/assetBufferManager/: AssetHandleManager.cpp  AssetHandleManager.h  AssetHandleManager.tpp
src/vks/src/base/: VulkanAndroid.cpp  VulkanAndroid.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.hpp  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  benchmark.hpp  frustum.hpp  threadpool.hpp
src/vks/src/descriptorManager/: DescriptorManager.cpp  DescriptorManager.h  DescriptorManager.tpp
src/vks/src/imguiManager/: ImguiManager.cpp  ImguiManager.hpp
src/vks/src/renderManager/: RenderManager.cpp  RenderManager.hpp
src/vks/src/renderPipelineManager/: RenderPipelineManager.cpp  RenderPipelineManager.hpp
src/vks/src/swapChainManager/: SwapChainManager.cpp  SwapChainManager.hpp
src/vks/src/vulkanContext/: VulkanContext.cpp  VulkanContext.hpp
(+797 files in other folders)
